--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=ForoHub
+spring.datasource.url=jdbc:mysql://localhost/foro_hub_Yei
+spring.datasource.username=root
+spring.datasource.password=
